--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: ubuntu-latest
+    runs-on: ubuntu
     permissions:
       actions: read
       contents: read
@@ -42,9 +42,9 @@ jobs:
       #    and modify them (or add more) to build your code if your project
       #    uses a compiled language
 
-      #- run: |
-      #   make bootstrap
-      #   make release
+      - run: |
+          make bootstrap
+          make release
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
